# ftl

./: .clippy.toml  .codecov.yml  .editorconfig  .gitignore  .gitmessage  .golangci.yml  .release-please-manifest.json  ARCHITECTURE.md  ARCHITECTURE_RECOMMENDATIONS.md  BACKEND_SYNTHESIS_FIX.md  BACKEND_TEAM_ECR_ISSUE.md  BUILD.md  CHANGELOG.md  CHANGELOG_v0.8.0.md  CLAUDE.md  COMMIT_MESSAGE.md  COMPLETE_MIGRATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_PREVIEW_EXAMPLE.md  FUNCTIONALITY_COMPARISON.md  LICENSE  M2M_AUTHENTICATION.md  MIGRATION_VALIDATION.md  Makefile  Makefile.go-project  PLATFORM_CLEAN_START_v0.6.3.md  PLATFORM_CURRENT_VERSION.md  PLATFORM_MIGRATION.md  PLATFORM_MIGRATION_GUIDE.md  PLATFORM_ORG_ACCESS_GUIDE.md  PLATFORM_TEAM_COMMUNICATION.md  PLATFORM_TEAM_FIX_RESPONSE.md  PLATFORM_TEAM_MEMO.md  PLATFORM_V0.6.0_RELEASE.md  QUICK_REFERENCE-go.md  README.md  RELEASE_COMMANDS.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.md  (+39 more)
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: add.rs  app.rs  auth.rs  build.rs  deploy.rs  init.rs  login.rs  logout.rs  mod.rs  publish.rs  registry.rs  setup.rs  test.rs  up.rs  update.rs
components/: CHANGELOG.md  Cargo.toml
components/ftl-auth-gateway/: Cargo.toml
components/ftl-auth-gateway/src/: config.rs  jwks.rs  lib.rs
components/mcp-authorizer/: CHANGELOG.md  CONFIG_SCHEMA.md  Cargo.toml  Makefile  README.md  README_POLICY_AUTHORIZATION.md  TEST_FIX_PLAN.md  TEST_GAPS_ANALYSIS.md  debug_test.sh  rego-full-reference.md  rego-quick-reference.md  run_tests.sh  spin-test.toml  spin.toml  test_output.txt
components/mcp-authorizer/components/mcp-authorizer/: CHANGELOG.md
components/mcp-authorizer/examples/: test_token_usage.md
components/mcp-authorizer/policies/: authorization_data.json  mcp_authorization.rego
components/mcp-authorizer/src/: auth.rs  config.rs  discovery.rs  error.rs  forwarding.rs  jwks.rs  kv.rs  lib.rs  metadata.rs  policy.rs  providers.rs  proxy.rs  static_token.rs  test_utils.rs  token.rs  token_verifier.rs
components/mcp-authorizer/tests/: Cargo.toml  FASTMCP_PARITY_STATUS.md  README.md  TEST_COVERAGE_SUMMARY.md  TEST_SUMMARY.md  fix_tests.py  integration_test.sh  jwt_test_helper.py  requirements.txt  run_integration_tests.py
components/mcp-authorizer/tests/src/: authkit_integration_tests.rs  critical_audit_test.rs  critical_verification_test.rs  error_response_tests.rs  gateway_forwarding_tests.rs  jwks_caching_tests.rs  jwt_test_utils_tests.rs  jwt_tests.rs  jwt_verification_tests.rs  kid_validation_tests.rs  lib.rs  multiple_audiences_tests.rs  oauth_discovery_tests.rs  optional_issuer_tests.rs  policy_basic_tests.rs  policy_complex_tests.rs  policy_component_tests.rs  policy_data_tests.rs  policy_mcp_tool_tests.rs  policy_org_mode_tests.rs  policy_private_mode_tests.rs  policy_test_helpers.rs  provider_config_tests.rs  request_helpers.rs  scope_validation_tests.rs  simple_test.rs  static_provider_tests.rs  tenant_validation_tests.rs  test_audience_required.rs  test_comprehensive_debug.rs  test_config_loading.rs  test_debug.rs  test_helpers.rs  test_setup.rs  test_token_utils.rs  test_variable_loading.rs
components/mcp-gateway/: CHANGELOG.md  Cargo.toml  Makefile  README.md  spin.toml
components/mcp-gateway/src/: gateway.rs  lib.rs  mcp_types.rs
components/mcp-gateway/src/middleware/: mod.rs  (+4 more)
components/mcp-gateway/tests/: Cargo.toml  README.md  run_tests.sh  spin-test.toml
components/metrics-collector/: Cargo.toml  README.md
components/metrics-collector/src/: aggregator.rs  collector.rs  emission.rs  lib.rs
crates/commands/: Cargo.toml  README.md
crates/commands/src/: component_resolver.rs  lib.rs  registry.rs  test_helpers.rs
crates/ftl-commands/: Cargo.toml  README.md
crates/ftl-commands/src/: lib.rs  test_helpers.rs
crates/ftl-common/: Cargo.toml
crates/ftl-common/src/: lib.rs  spin_installer.rs  spin_installer_tests.rs  spin_installer_tests_akamai.rs  test_utils.rs  ui.rs  version_cache.rs  version_cache_tests.rs
crates/ftl-core/: Cargo.toml  README.md
crates/ftl-core/src/: api_client.rs  deps.rs  lib.rs  test_helpers.rs  types.rs
crates/ftl-language/: Cargo.toml  README.md
crates/ftl-language/src/: language.rs  language_tests.rs  lib.rs
crates/ftl-sdk-rs-macros/: Cargo.toml
crates/resolve/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  Makefile  PUBLISHING.md  README.md  build.rs
crates/resolve/scripts/: bump-version.sh
crates/resolve/src/: ftl_resolve.rs  lib.rs  resolver.rs  spin_config.rs  transpiler.rs  transpiler_tests.rs
crates/resolve/tests/: cli_integration.rs
crates/spin-compose/: Cargo.toml  README.md
crates/spin-compose/cue.mod/: module.cue
crates/spin-compose/src/: main.rs
crates/spin-compose/tests/: integration.rs
crates/telemetry/: Cargo.toml  PRIVACY_AUDIT.md  README.md
crates/telemetry/src/: config.rs  events.rs  lib.rs  logger.rs  notice.rs  privacy.rs  storage.rs
sdk/: CHANGELOG.md  Cargo.toml  README.md
sdk/go/: .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASING.md  doc.go  edge_cases_test.go  error_sanitization_test.go  ftl_http.go  ftl_sdk.go  ftl_sdk_test.go  go.mod  handlers_v3.go  handlers_v3_http.go  handlers_v3_integration_test.go  handlers_v3_test.go  handlers_v3_test_stub.go  integration_v3_test.go  refactoring_validation_test.go  response_v3.go  response_v3_test.go  schema_gen.go  schema_gen_test.go  types_v3.go  types_v3_test.go
sdk/go/internal/: reflection.go
sdk/python/: .gitignore  CHANGELOG.md  Makefile  README.md  RELEASING.md  pyproject.toml  tox.ini
sdk/python/src/: __init__.py  ftl_sdk.py
sdk/python/tests/: __init__.py  test_ftl_sdk.py
sdk/rust/: CHANGELOG.md  Cargo.toml  README.md  clippy.toml
sdk/rust-macros/: CHANGELOG.md  Cargo.toml  README.md
sdk/rust-macros/src/: lib.rs
sdk/rust/src/: lib.rs
sdk/typescript/: CHANGELOG.md  README.md  package-lock.json  package.json
sdk/typescript/src/: index.ts  json-schema.ts
sdk/typescript/tests/: index.test.ts
templates/ftl-mcp-python/content/: .gitignore  Makefile  README.md  pyproject.toml
(+1050 files in other folders)
