[package]
name = "ftl-cli"
version = "0.0.18"
authors = ["FTL Contributors"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/fastertools/ftl-cli"
homepage = "https://github.com/fastertools/ftl-cli"
documentation = "https://crates.io/crates/ftl-cli"
keywords = ["wasm", "mcp", "tools", "cli", "webassembly"]
categories = ["command-line-utilities", "development-tools", "wasm"]
description = "CLI wrapper for Spin to build and deploy MCP servers using wasmcp templates"
readme = "README.md"
exclude = ["demo_hash", "toolkit-*"]

[[bin]]
name = "ftl"
path = "src/main.rs"

# This binary should not be built for wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Empty to prevent wasm builds

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros", "time", "process", "signal", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8"
which = "8.0"
handlebars = "6.0"
walkdir = "2.4"
notify = "8.1"
include_dir = "0.7"
cargo_metadata = "0.20"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
indicatif = "0.18"
dialoguer = "0.11"
console = "0.16"
semver = "1.0"
atty = "0.2"
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "4.2"

[build-dependencies]
toml = "0.8"
serde_json = "1.0"

# Optimization profiles
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.tiny]
inherits = "release"
opt-level = "z"

[profile.dev]
opt-level = 1
debug = true