[package]
name = "ftl-cli"
version = "0.0.23"
authors = ["FTL Contributors"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/fastertools/ftl-cli"
homepage = "https://github.com/fastertools/ftl-cli"
documentation = "https://crates.io/crates/ftl-cli"
keywords = ["wasm", "mcp", "tools", "cli", "webassembly"]
categories = ["command-line-utilities", "development-tools", "wasm"]
description = "CLI wrapper for Spin to build and deploy MCP tools using ftl-mcp framework"
readme = "README.md"
exclude = ["demo_hash", "toolkit-*"]

[[bin]]
name = "ftl"
path = "src/main.rs"

# This binary should not be built for wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Empty to prevent wasm builds

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
toml_edit = "0.23"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros", "time", "process", "signal", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8"
which = "8.0"
handlebars = "6.0"
walkdir = "2.4"
notify = "8.1"
include_dir = "0.7"
cargo_metadata = "0.21"
dirs = "6.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
indicatif = "0.18"
dialoguer = "0.11"
console = "0.16"
semver = "1.0"
atty = "0.2"
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "4.3"
webbrowser = "1.0"
keyring = { version = "3.0", features = ["apple-native", "windows-native", "sync-secret-service"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
num_cpus = "1.16"
# Dependencies for the generated API client
progenitor-client = "0.11.0"
futures = "0.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
regress = "0.10"
# Dependency injection
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
# Testing framework
mockall = "0.13"
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"
serial_test = "3.2"
rstest = "0.25"
pretty_assertions = "1.4"
wiremock = "0.6"
tempfile = "3.8"
insta = { version = "1.41", features = ["yaml"] }

# Code coverage
cargo-tarpaulin = "0.32"

[build-dependencies]
toml = "0.9"
serde_json = "1.0"
progenitor = "0.11.0"
prettyplease = "0.2.22"
syn = "2.0"
openapiv3 = "2.0"

# Optimization profiles
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.tiny]
inherits = "release"
opt-level = "z"

[profile.dev]
opt-level = 1
debug = true

# Linting configuration
[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
# Deny categories
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# Warn categories  
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Specific lints to enable
missing_safety_doc = "warn"
use_self = "warn"
items_after_statements = "warn"
cognitive_complexity = "warn"
missing_const_for_fn = "warn"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_ok_or = "warn"
map_unwrap_or = "warn"
implicit_clone = "warn"
unused_async = "warn"
unused_self = "warn"
match_wildcard_for_single_variants = "warn"
needless_continue = "warn"
await_holding_lock = "deny"

# Disable some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"