[package]
name = "ftl-cli"
version = "0.0.36"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://crates.io/crates/ftl-cli"
keywords = ["wasm", "mcp", "tools", "cli", "webassembly"]
categories = ["command-line-utilities", "development-tools", "wasm"]
description = "CLI for FTL"
readme = "../README.md"
exclude = ["demo_hash", "toolkit-*"]

[[bin]]
name = "ftl"
path = "src/main.rs"

[dependencies]
# Internal crates
ftl-runtime = { version = "0.0.23", path = "../crates/runtime" }
ftl-commands = { version = "0.0.23", path = "../crates/commands" }
ftl-common = { version = "0.0.23", path = "../crates/common" }
ftl-language = { version = "0.0.23", path = "../crates/language" }

# Only the minimal dependencies needed for the CLI wrapper
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
notify = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal", "process"] }

[dev-dependencies]
# Most tests should be in the library crates
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true