[workspace]
resolver = "2"
members = [
    "rust",
    "rust-macros"
]

[workspace.package]
version = "0.13.0"
edition = "2024"
rust-version = "1.89"
authors = ["FTL Contributors"]
license = "Apache-2.0"
repository = "https://github.com/fastertools/ftl"
homepage = "https://github.com/fastertools/ftl"

[workspace.dependencies]
# Common dependencies for SDK
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Dev dependencies
mockall = "0.13"
assert_cmd = "2.0"
predicates = "3.1"
assert_fs = "1.1"
serial_test = "3.2"
rstest = "0.23"
pretty_assertions = "1.4"
wiremock = "0.6"
insta = { version = "1.41", features = ["yaml"] }
cargo-tarpaulin = "0.31"

# Optimization profiles
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.tiny]
inherits = "release"
opt-level = "z"

[profile.dev]
opt-level = 1
debug = true

# Workspace-wide linting configuration
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Deny categories
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# Warn categories  
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Specific lints to enable
missing_safety_doc = "warn"
use_self = "warn"
items_after_statements = "warn"
cognitive_complexity = "warn"
missing_const_for_fn = "warn"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_ok_or = "warn"
map_unwrap_or = "warn"
implicit_clone = "warn"
unused_async = "warn"
unused_self = "warn"
match_wildcard_for_single_variants = "warn"
needless_continue = "warn"
await_holding_lock = "deny"

# Disable some pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"