[package]
name = "metrics-collector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "ftl:metrics-collector"

[dependencies]
ftl-sdk = { path = "../../sdk/rust", features = ["macros"] }
spin-sdk = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0.4"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }

