[package]
name = "metrics-collector"
authors.workspace = true
description = "Metrics collector component for telemetry aggregation and export"
version = "0.1.0"
license.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["metrics", "telemetry", "webassembly", "spin"]
categories = ["web-programming", "wasm"]
publish = false

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "ftl:metrics-collector"

[dependencies]
ftl-sdk = { path = "../../sdk/rust", features = ["macros"] }
spin-sdk = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0.4"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }

