[package]
name = "ftl-commands"
version = "0.0.23"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command implementations for FTL CLI"

[dependencies]
ftl-core = { version = "0.0.23", path = "../ftl-core" }
ftl-common = { version = "0.0.23", path = "../ftl-common" }
ftl-language = { version = "0.0.23", path = "../ftl-language" }

anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }
handlebars = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
include_dir = { workspace = true }
cargo_metadata = { workspace = true }
reqwest = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
semver = { workspace = true }
futures-util = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
webbrowser = { workspace = true }
async-trait = { workspace = true }
num_cpus = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[dev-dependencies]
mockall = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
assert_fs = { workspace = true }
serial_test = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true