[package]
name = "ftl-common"
version = "0.0.23"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Common utilities for FTL CLI"
readme = "README.md"
keywords = ["ftl", "cli", "utilities", "common", "helpers"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]

[dependencies]
ftl-core = { version = "0.0.23", path = "../ftl-core" }

anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
semver = { workspace = true }
futures-util = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true }
dialoguer = { workspace = true }
async-trait = { workspace = true }
atty = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
assert_fs = { workspace = true }
serial_test = { workspace = true }
rstest = { workspace = true }
wiremock = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true