[package]
name = "ftl-core"
version = "0.0.23"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for FTL CLI"
readme = "README.md"
keywords = ["ftl", "cli", "core", "api", "client"]
categories = ["development-tools", "api-bindings"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
keyring = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
progenitor-client = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
regress = { workspace = true }
which = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal", "process"] }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = { workspace = true }
mockall = { workspace = true }

[build-dependencies]
toml = "0.9"
serde_json = "1.0"
progenitor = "0.11.0"
prettyplease = "0.2.22"
syn = "2.0"
openapiv3 = "2.0"

[lints]
workspace = true