[package]
name = "ftl-sdk-macros"
version = "0.0.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Procedural macros for the FTL SDK"
repository.workspace = true
readme = "README.md"
keywords = ["ftl", "sdk", "macros", "proc-macro", "webassembly"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
