[package]
name = "spin-compose"
version = "0.1.0"
authors = ["FasterTools Team"]
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fastertools/ftl-cli"
description = "Infrastructure as Code for WebAssembly - compose and synthesize Spin applications"
readme = "README.md"
keywords = ["spin", "webassembly", "wasm", "compose", "cue"]
categories = ["command-line-utilities", "development-tools", "wasm"]

[[bin]]
name = "spinc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
which = "7.0"
tempfile = "3.14"
colored = "2.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"