[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftl-sdk"
version = "0.1.0"
description = "Python SDK for building MCP tools that compile to WebAssembly"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "FTL CLI Contributors"}
]
keywords = ["ftl", "mcp", "wasm", "webassembly", "spin", "fermyon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "spin-sdk>=3.3.0"
]

[project.urls]
Homepage = "https://github.com/fastertools/ftl-cli"
Repository = "https://github.com/fastertools/ftl-cli"
Issues = "https://github.com/fastertools/ftl-cli/issues"
Documentation = "https://github.com/fastertools/ftl-cli/tree/main/sdk/python"

[tool.setuptools]
py-modules = ["ftl_sdk"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]