[package]
name = "mcp-authorizer-tests"
version = "0.1.1"
edition = "2021"
description = "Test suite for ftl-auth-gateway"
license = "Apache-2.0"
repository = "https://github.com/fastertools/ftl"
readme = "../README.md"
keywords = ["testing", "spin", "webassembly"]
categories = ["development-tools::testing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-test-sdk = { git = "https://github.com/spinframework/spin-test", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
base64 = "0.22"
chrono = "0.4"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
rand_chacha = "0.3"

# This test suite is part of the root workspace
# Tests are run with: spin test
once_cell = "1.19"
