[project]
name = "{{project-name | snake_case}}"
version = "0.1.0"
description = "An FTL MCP tool written in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ftl-sdk @ file:///${FTL_SDK_PATH}/sdk/python"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"